--- a/scripts/aws/templates/lambda_exec_policy.json.j2
+++ b/scripts/aws/templates/lambda_exec_policy.json.j2
@@ -8,7 +8,7 @@
         "logs:CreateLogStream",
         "logs:PutLogEvents"
       ],
-      "Resource": "arn:aws:logs:*:*:*"
+      "Resource": "arn:aws:logs:{{ region }}:{{ acct_id }}:log-group:/aws/lambda/{{ func_name }}:*"
     }
   ]
 }
